Fix empty tab state message being clipped
Shift the 'No annotations in this group' message down slightly to
prevent the border from being clipped.

Also prevent text selection in the tabs.

--- a/h/static/styles/selection-tabs.scss
+++ b/h/static/styles/selection-tabs.scss
@@ -37,6 +37,8 @@
 
   // Disable focus ring for selected tab
   outline: none;
+
+  user-select: none;
 }
 
 .selection-tabs__type.is-selected {
@@ -49,6 +51,7 @@
   font-size: 10px;
 }
 
-.selection-loading {
-  text-align: center;
+.selection-tabs__empty-message {
+  position: relative;
+  top: 10px;
 }
